--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Tag selector to select the 'body' element */
 body { 
-  /* All <a> elements. */
+  /* All <body> elements. */
   color: #00b3e6;
 }
 
