--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@ body {
  background-color: #00b3e6;
 }
 
-/* Tag selector to select all 'div' elements. We only have one 'div' in our HTML */
+/* All <div> elements */
 div {
-  /* Your code here! */
+  width: 700px;
 }
 
 /* ID selector to select the element with id 'main-header' */
