--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ body {
 /* All <div> elements */
 div {
   width: 700px;
+  margin: auto;
+  font-family: "Helvetica Neue";
+  background-color: white;
+  paddin
 }
 
 /* ID selector to select the element with id 'main-header' */
